# jsonrpc2-pyclient

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
jsonrpc2pyclient/: __init__.py  _irpcclient.py  decorator.py  httpclient.py  rpcclient.py  wsclient.py
src/jsonrpc2pyclient/: httpclient.py  rpcclient.py
tests/: __init__.py  test_decorator.py  test_jsonrpc2_pyclient.py  test_ws_client.py
