[tool.poetry]
name = "jsonrpc2-pyclient"
version = "2.1.1"
description = "Python JSON-RPC 2.0 client library."
readme = "README.md"
repository = "https://gitlab.com/mburkard/jsonrpc2-pyclient"
homepage = "https://gitlab.com/mburkard/jsonrpc2-pyclient"
license = "AGPL-3.0-or-later"
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3"]
packages = [
    { include = "jsonrpc2pyclient/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
jsonrpc2-objects = "^1.3.7"
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
