[tool.poetry]
name = "jsonrpc2-pyclient"
version = "2.2.12"
description = "Python JSON-RPC 2.0 client library."
readme = "README.md"
repository = "https://gitlab.com/mburkard/jsonrpc2-pyclient"
homepage = "https://gitlab.com/mburkard/jsonrpc2-pyclient"
license = "AGPL-3.0-or-later"
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3"]
packages = [
    { include = "jsonrpc2pyclient/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
jsonrpc2-objects = "^2.0.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
safety = "^2.1.1"
mypy = "^0.971"
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
