[metadata]
name = jsonrpc2-pyclient
version = 0.2.2
author = Matthew Burkard
author_email = matthewjburkard@gmail.com
description = Python JSON-RPC 2.0 client library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/mburkard/jsonrpc2-pyclient
classifiers = Programming Language :: Python :: 3

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.9
install_requires =
	jsonrpc2-objects~=1.3.0
	requests~=2.26.0

[options.packages.find]
where = src
